--- a/StockExchangeWebsite/appsettings.json
+++ b/StockExchangeWebsite/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=stock-exchange-website-db;Integrated Security=True;Pooling=False;Encrypt=False;Trust Server Certificate=False"
+  },
   "AllowedHosts": "*"
 }
